@@ -1,3 +1,8 @@
+2013-01-26  Karl Berry  <karl@tug.org>
+
+	* Makefile.am (echo-shell-scripts): new target, for
+	check-wrapper-consistency.
+
 2013-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am [WIN32]: Install {rungs,tlmgr}.exe wrappers.
